[gd_scene load_steps=27 format=3 uid="uid://deare6ipirplk"]

[ext_resource type="Script" path="res://scenes/title_screen/ColorRect.gd" id="1_uy7ao"]
[ext_resource type="Theme" uid="uid://cv4w4ffaby5el" path="res://assets/graphical_assets/styles/button_main.tres" id="3_mou80"]
[ext_resource type="Script" path="res://scenes/main_menu/scripts/MenuContainer.gd" id="4_5awxv"]
[ext_resource type="Script" path="res://scenes/main_menu/scripts/Play.gd" id="5_7ioq7"]
[ext_resource type="Texture2D" uid="uid://cqboxf3ckfoln" path="res://assets/graphical_assets/user_interface/container/container.tga" id="6_4ujbp"]
[ext_resource type="Script" path="res://scenes/main_menu/scripts/Options.gd" id="6_6htjl"]
[ext_resource type="Script" path="res://scenes/main_menu/scripts/Quit.gd" id="7_26t7j"]
[ext_resource type="PackedScene" uid="uid://cho5axinwlg15" path="res://components/menu_textbox/MenuTextbox.tscn" id="8_5asj7"]
[ext_resource type="Script" path="res://scenes/main_menu/scripts/DifficultyMenu.gd" id="9_tu7mx"]
[ext_resource type="Script" path="res://scenes/main_menu/scripts/Settings.gd" id="10_pvbhm"]
[ext_resource type="Script" path="res://scenes/main_menu/scripts/EasyBtn.gd" id="10_xbasp"]
[ext_resource type="Script" path="res://scenes/main_menu/scripts/MediumBtn.gd" id="11_aki4r"]
[ext_resource type="Script" path="res://scenes/main_menu/scripts/Video.gd" id="11_c0uvf"]
[ext_resource type="PackedScene" uid="uid://0fx6dc8c8ukb" path="res://components/back_button/BackButton.tscn" id="12_ax4u8"]
[ext_resource type="Script" path="res://scenes/main_menu/scripts/HardBtn.gd" id="12_pwd64"]
[ext_resource type="Script" path="res://scenes/main_menu/scripts/ReturnBtn.gd" id="13_0ewxx"]
[ext_resource type="Script" path="res://scenes/main_menu/scripts/Audio.gd" id="13_0wpcl"]
[ext_resource type="Script" path="res://scenes/main_menu/scripts/ActionButtonContainer.gd" id="14_2m575"]
[ext_resource type="Theme" uid="uid://tkr4bu68wbdu" path="res://assets/graphical_assets/styles/SettingsScene.tres" id="14_7nlx3"]
[ext_resource type="PackedScene" uid="uid://c4x8k1nr1nq2u" path="res://components/action_button/ActionButton.tscn" id="15_gjpx2"]
[ext_resource type="Script" path="res://scenes/main_menu/scripts/MenutTextboxContainer.gd" id="15_kdu1y"]
[ext_resource type="Script" path="res://scenes/main_menu/scripts/License.gd" id="16_pabyu"]
[ext_resource type="Script" path="res://scenes/main_menu/scripts/AudioInputsContainer.gd" id="17_cql55"]
[ext_resource type="Script" path="res://scenes/main_menu/scripts/LicenseText.gd" id="18_co63x"]
[ext_resource type="PackedScene" uid="uid://babm5pn26wmka" path="res://components/scrollbar_textbox/ScrollbarTextbox.tscn" id="19_edlpb"]

[sub_resource type="GDScript" id="GDScript_hhh7j"]
script/source = "extends ScrollContainer

@onready var license_text = $LicenseMarginContainer/LicenseText

func _ready() -> void:
	var height: int = license_text.get_content_height()
	var width: int = license_text.get_content_width()
	var minimum_size: Vector2 = Vector2(height, width)
	self.custom_minimum_size = minimum_size
\"position\"
"

[node name="MainScene" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="SettingsBackgroundColor" type="ColorRect" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(1, 0.74902, 0.470588, 1)
script = ExtResource("1_uy7ao")
_time_interval = 0.0
_fade_time = 0.15

[node name="MenuBackgroundColor" type="ColorRect" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.913725, 0.337255, 0.298039, 1)
script = ExtResource("1_uy7ao")
_time_interval = 0.0
_fade_time = 0.15

[node name="MenuBackground" type="TextureRect" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 3

[node name="MenuContainer" type="HBoxContainer" parent="UI"]
visible = false
anchors_preset = -1
anchor_left = 0.109
anchor_top = 0.283
anchor_right = 0.891113
anchor_bottom = 0.717
offset_left = -0.115715
offset_top = 6.99199
offset_bottom = 7.008
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_5awxv")
metadata/_edit_use_anchors_ = true

[node name="MainMenu" type="VBoxContainer" parent="UI/MenuContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 158)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Play" type="Button" parent="UI/MenuContainer/MainMenu"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath("../Quit")
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_right = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Options")
focus_next = NodePath("../Options")
focus_previous = NodePath("../Quit")
theme = ExtResource("3_mou80")
keep_pressed_outside = true
text = "Jugar"
script = ExtResource("5_7ioq7")

[node name="Options" type="Button" parent="UI/MenuContainer/MainMenu"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath("../Play")
focus_neighbor_top = NodePath("../Play")
focus_neighbor_right = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Play")
theme = ExtResource("3_mou80")
keep_pressed_outside = true
text = "Opciones"
script = ExtResource("6_6htjl")

[node name="Quit" type="Button" parent="UI/MenuContainer/MainMenu"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_left = NodePath("../Options")
focus_neighbor_top = NodePath("../Options")
focus_neighbor_right = NodePath("../Play")
focus_neighbor_bottom = NodePath("../Play")
focus_next = NodePath("../Play")
focus_previous = NodePath("../Options")
theme = ExtResource("3_mou80")
keep_pressed_outside = true
text = "Salir"
script = ExtResource("7_26t7j")

[node name="Placeholder" type="VBoxContainer" parent="UI/MenuContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MenuTextbox" type="VBoxContainer" parent="UI/MenuContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(450, 250)
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="UI/MenuContainer/MenuTextbox"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3

[node name="NinePatchRect" type="NinePatchRect" parent="UI/MenuContainer/MenuTextbox/MarginContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
texture = ExtResource("6_4ujbp")
region_rect = Rect2(66, 72, 156, 156)
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 30
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="MenuTextbox" parent="UI/MenuContainer/MenuTextbox/MarginContainer" instance=ExtResource("8_5asj7")]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40
default_text = "Pasa el cursor sobre una opción para ver más información."

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MenuContainer"]
layout_mode = 2

[node name="DifficultyMenu" type="VBoxContainer" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = -1
anchor_left = 0.304688
anchor_top = 0.0763889
anchor_right = 0.695313
anchor_bottom = 0.977431
offset_top = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("9_tu7mx")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="UI/DifficultyMenu"]
clip_contents = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="UI/DifficultyMenu/MarginContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
texture = ExtResource("6_4ujbp")
region_rect = Rect2(66, 72, 156, 156)
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 30
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="MenuTextbox" parent="UI/DifficultyMenu/MarginContainer" instance=ExtResource("8_5asj7")]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40
default_text = "Selecciona una dificultad"
alignment = "c"

[node name="Placeholder1" type="BoxContainer" parent="UI/DifficultyMenu"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="EasyBtn" type="Button" parent="UI/DifficultyMenu"]
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_mou80")
text = "Fácil"
script = ExtResource("10_xbasp")

[node name="MediumBtn" type="Button" parent="UI/DifficultyMenu"]
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_mou80")
text = "Media"
script = ExtResource("11_aki4r")

[node name="HardBtn" type="Button" parent="UI/DifficultyMenu"]
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_mou80")
text = "Difícil"
script = ExtResource("12_pwd64")

[node name="Placeholder2" type="BoxContainer" parent="UI/DifficultyMenu"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 3

[node name="ReturnBtn" type="Button" parent="UI/DifficultyMenu"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_mou80")
text = "Regresar"
script = ExtResource("13_0ewxx")

[node name="Settings" type="TabContainer" parent="UI"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 36.0
offset_right = -64.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
theme = ExtResource("14_7nlx3")
theme_override_constants/side_margin = 25
script = ExtResource("10_pvbhm")

[node name="Video" type="TabBar" parent="UI/Settings"]
layout_mode = 2
tooltip_text = "Opciones de configuración de vídeo"
focus_neighbor_left = NodePath("../License")
focus_neighbor_top = NodePath("../License")
focus_neighbor_right = NodePath("../Audio")
focus_neighbor_bottom = NodePath("../Audio")
focus_next = NodePath("../Audio")
focus_previous = NodePath("../License")
script = ExtResource("11_c0uvf")

[node name="VideoOptionsContainer" type="HBoxContainer" parent="UI/Settings/Video"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.264
anchor_top = 0.188
anchor_right = 0.72998
anchor_bottom = 0.812
offset_left = 4.81601
offset_top = 78.1389
offset_bottom = -78.1389
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VideoLabelsContainer" type="VBoxContainer" parent="UI/Settings/Video/VideoOptionsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Fullscreen" type="Label" parent="UI/Settings/Video/VideoOptionsContainer/VideoLabelsContainer"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "El modo pantalla completa permite deshacerse de los bordes y ventanas del sistema operativo"
mouse_filter = 1
text = "Pantalla completa"
vertical_alignment = 1

[node name="Borderless" type="Label" parent="UI/Settings/Video/VideoOptionsContainer/VideoLabelsContainer"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "El modo sin bordes se deshace solo de los marcos de la ventana del sistema operativo"
mouse_filter = 1
text = "Sin bordes"
vertical_alignment = 1

[node name="Vsync" type="Label" parent="UI/Settings/Video/VideoOptionsContainer/VideoLabelsContainer"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Elige un tipo de sinscronización vertical sólo si está disponible"
mouse_filter = 1
text = "Sincronización vertical (VSync)"
vertical_alignment = 1

[node name="VideoInputsContainer" type="VBoxContainer" parent="UI/Settings/Video/VideoOptionsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Fullscreen" type="CheckButton" parent="UI/Settings/Video/VideoOptionsContainer/VideoInputsContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Activa/Desactiva el modo pantalla completa"
expand_icon = true

[node name="Borderless" type="CheckButton" parent="UI/Settings/Video/VideoOptionsContainer/VideoInputsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Activa/Desactiva el modo sin bordes"
expand_icon = true

[node name="Vsync" type="OptionButton" parent="UI/Settings/Video/VideoOptionsContainer/VideoInputsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Selecciona el tipo de sincronización vertical"
alignment = 1
icon_alignment = 1
item_count = 4
selected = 1
popup/item_0/text = "Desactivado"
popup/item_0/id = 0
popup/item_1/text = "Activado"
popup/item_1/id = 1
popup/item_2/text = "Adaptative"
popup/item_2/id = 2
popup/item_3/text = "Mailbox"
popup/item_3/id = 3

[node name="BackButton" parent="UI/Settings/Video" instance=ExtResource("12_ax4u8")]
layout_mode = 1
offset_left = -116.0
offset_top = -68.0

[node name="Label" type="Label" parent="UI/Settings/Video"]
visible = false
layout_mode = 2
offset_top = -28.0
offset_right = 88.0
offset_bottom = -8.0
text = "Opciones"

[node name="Audio" type="TabBar" parent="UI/Settings"]
visible = false
layout_mode = 2
tooltip_text = "Opciones de configuración de audio"
focus_neighbor_left = NodePath("../Video")
focus_neighbor_top = NodePath("../Video")
focus_neighbor_right = NodePath("../Controls")
focus_neighbor_bottom = NodePath("../Controls")
focus_next = NodePath("../Controls")
focus_previous = NodePath("../Video")
script = ExtResource("13_0wpcl")

[node name="AudioOptionsContainer" type="MarginContainer" parent="UI/Settings/Audio"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Settings/Audio/AudioOptionsContainer"]
layout_mode = 2

[node name="BoxContainer" type="BoxContainer" parent="UI/Settings/Audio/AudioOptionsContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="AudioLabelsContainer" type="VBoxContainer" parent="UI/Settings/Audio/AudioOptionsContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Master" type="Label" parent="UI/Settings/Audio/AudioOptionsContainer/HBoxContainer/AudioLabelsContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Control del volumen principal del audio"
mouse_filter = 1
text = "Master"
vertical_alignment = 1

[node name="Music" type="Label" parent="UI/Settings/Audio/AudioOptionsContainer/HBoxContainer/AudioLabelsContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Control del volumen de la música del juego"
mouse_filter = 1
text = "Música"
vertical_alignment = 1

[node name="SFX" type="Label" parent="UI/Settings/Audio/AudioOptionsContainer/HBoxContainer/AudioLabelsContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Control del volumen de los efectos especiales dentro del juego"
mouse_filter = 1
text = "Efectos especiales"
vertical_alignment = 1

[node name="AudioInputsContainer" type="VBoxContainer" parent="UI/Settings/Audio/AudioOptionsContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
script = ExtResource("17_cql55")

[node name="Master" type="HSlider" parent="UI/Settings/Audio/AudioOptionsContainer/HBoxContainer/AudioInputsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Ajusta el nivel del volumen principal"
max_value = 1.0
step = 0.05
tick_count = 11

[node name="Music" type="HSlider" parent="UI/Settings/Audio/AudioOptionsContainer/HBoxContainer/AudioInputsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Ajusta el nivel del volumen de la música"
max_value = 1.0
step = 0.05
tick_count = 11

[node name="SFX" type="HSlider" parent="UI/Settings/Audio/AudioOptionsContainer/HBoxContainer/AudioInputsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Ajusta el nivel del volumen de los efectos especiales"
max_value = 1.0
step = 0.05
tick_count = 11

[node name="BoxContainer2" type="BoxContainer" parent="UI/Settings/Audio/AudioOptionsContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" parent="UI/Settings/Audio" instance=ExtResource("12_ax4u8")]
layout_mode = 1

[node name="Controls" type="TabBar" parent="UI/Settings"]
visible = false
layout_mode = 2
tooltip_text = "Opciones de configuración de los controles"
focus_neighbor_left = NodePath("../Audio")
focus_neighbor_top = NodePath("../Audio")
focus_neighbor_right = NodePath("../License")
focus_neighbor_bottom = NodePath("../License")
focus_next = NodePath("../License")
focus_previous = NodePath("../Audio")

[node name="ControlsOptionsContainer" type="HBoxContainer" parent="UI/Settings/Controls"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -175.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="UI/Settings/Controls/ControlsOptionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Settings/Controls/ControlsOptionsContainer/MarginContainer"]
layout_mode = 2

[node name="Placeholder1" type="BoxContainer" parent="UI/Settings/Controls/ControlsOptionsContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ControlsLabelsContainer" type="VBoxContainer" parent="UI/Settings/Controls/ControlsOptionsContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Up" type="Label" parent="UI/Settings/Controls/ControlsOptionsContainer/MarginContainer/HBoxContainer/ControlsLabelsContainer"]
layout_mode = 2
size_flags_vertical = 6
tooltip_text = "Acción para moverse hacia arriba"
mouse_filter = 1
text = "ARRIBA"

[node name="Down" type="Label" parent="UI/Settings/Controls/ControlsOptionsContainer/MarginContainer/HBoxContainer/ControlsLabelsContainer"]
layout_mode = 2
size_flags_vertical = 6
tooltip_text = "Acción para moverse hacia abajo"
mouse_filter = 1
text = "ABAJO"

[node name="Left" type="Label" parent="UI/Settings/Controls/ControlsOptionsContainer/MarginContainer/HBoxContainer/ControlsLabelsContainer"]
layout_mode = 2
size_flags_vertical = 6
tooltip_text = "Acción para moverse hacia la izquierda"
mouse_filter = 1
text = "IZQUIERDA"

[node name="Right" type="Label" parent="UI/Settings/Controls/ControlsOptionsContainer/MarginContainer/HBoxContainer/ControlsLabelsContainer"]
layout_mode = 2
size_flags_vertical = 6
tooltip_text = "Acción para moverse hacia la derecha"
mouse_filter = 1
text = "DERECHA"

[node name="Aceptar" type="Label" parent="UI/Settings/Controls/ControlsOptionsContainer/MarginContainer/HBoxContainer/ControlsLabelsContainer"]
layout_mode = 2
size_flags_vertical = 6
tooltip_text = "Acción para aceptar"
mouse_filter = 1
text = "ACEPTAR"

[node name="Pause" type="Label" parent="UI/Settings/Controls/ControlsOptionsContainer/MarginContainer/HBoxContainer/ControlsLabelsContainer"]
layout_mode = 2
size_flags_vertical = 6
tooltip_text = "Acción para abrir el menú de pausa"
mouse_filter = 1
text = "PAUSA/SALIR"

[node name="ActionButtonContainer" type="VBoxContainer" parent="UI/Settings/Controls/ControlsOptionsContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("14_2m575")

[node name="Up" parent="UI/Settings/Controls/ControlsOptionsContainer/MarginContainer/HBoxContainer/ActionButtonContainer" instance=ExtResource("15_gjpx2")]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 7
text = "Arriba"

[node name="Down" parent="UI/Settings/Controls/ControlsOptionsContainer/MarginContainer/HBoxContainer/ActionButtonContainer" instance=ExtResource("15_gjpx2")]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 7
text = "Abajo"
action = "ui_down"

[node name="Left" parent="UI/Settings/Controls/ControlsOptionsContainer/MarginContainer/HBoxContainer/ActionButtonContainer" instance=ExtResource("15_gjpx2")]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 7
text = "Izquierda"
action = "ui_left"

[node name="Right" parent="UI/Settings/Controls/ControlsOptionsContainer/MarginContainer/HBoxContainer/ActionButtonContainer" instance=ExtResource("15_gjpx2")]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 7
text = "Derecha"
action = "ui_right"

[node name="Accept" parent="UI/Settings/Controls/ControlsOptionsContainer/MarginContainer/HBoxContainer/ActionButtonContainer" instance=ExtResource("15_gjpx2")]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Aceptar"
action = "ui_accept"

[node name="Pause" parent="UI/Settings/Controls/ControlsOptionsContainer/MarginContainer/HBoxContainer/ActionButtonContainer" instance=ExtResource("15_gjpx2")]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Pausa"
action = "ui_cancel"

[node name="MenuTextboxContainer" type="VBoxContainer" parent="UI/Settings/Controls/ControlsOptionsContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("15_kdu1y")

[node name="MenuTextbox" parent="UI/Settings/Controls/ControlsOptionsContainer/MarginContainer/HBoxContainer/MenuTextboxContainer" instance=ExtResource("8_5asj7")]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2
alignment = "c"

[node name="Placeholder2" type="BoxContainer" parent="UI/Settings/Controls/ControlsOptionsContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" parent="UI/Settings/Controls" instance=ExtResource("12_ax4u8")]
layout_mode = 1

[node name="License" type="TabBar" parent="UI/Settings"]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../Controls")
focus_neighbor_top = NodePath("../Controls")
focus_neighbor_right = NodePath("../Video")
focus_neighbor_bottom = NodePath("../Video")
focus_next = NodePath("../Video")
focus_previous = NodePath("../Controls")
script = ExtResource("16_pabyu")

[node name="LicenseScrollContainer" type="ScrollContainer" parent="UI/Settings/License"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_hhh7j")

[node name="LicenseMarginContainer" type="MarginContainer" parent="UI/Settings/License/LicenseScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 150
theme_override_constants/margin_bottom = 150

[node name="LicenseText" type="RichTextLabel" parent="UI/Settings/License/LicenseScrollContainer/LicenseMarginContainer"]
custom_minimum_size = Vector2(520, 520)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 2
bbcode_enabled = true
fit_content = true
scroll_following = true
context_menu_enabled = true
selection_enabled = true
script = ExtResource("18_co63x")

[node name="scrollbar_textbox" parent="UI/Settings/License" instance=ExtResource("19_edlpb")]
layout_mode = 1

[node name="BackButton" parent="UI/Settings/License" instance=ExtResource("12_ax4u8")]
layout_mode = 1

[connection signal="pressed" from="UI/MenuContainer/MainMenu/Play" to="UI/MenuContainer/MainMenu/Play" method="_on_pressed"]
[connection signal="pressed" from="UI/MenuContainer/MainMenu/Options" to="UI/MenuContainer/MainMenu/Options" method="_on_pressed"]
[connection signal="pressed" from="UI/MenuContainer/MainMenu/Quit" to="UI/MenuContainer/MainMenu/Quit" method="_on_pressed"]
[connection signal="pressed" from="UI/DifficultyMenu/EasyBtn" to="UI/DifficultyMenu/EasyBtn" method="_on_pressed"]
[connection signal="visibility_changed" from="UI/DifficultyMenu/EasyBtn" to="UI/DifficultyMenu/EasyBtn" method="_on_visibility_changed"]
[connection signal="pressed" from="UI/DifficultyMenu/MediumBtn" to="UI/DifficultyMenu/MediumBtn" method="_on_pressed"]
[connection signal="pressed" from="UI/DifficultyMenu/HardBtn" to="UI/DifficultyMenu/HardBtn" method="_on_pressed"]
[connection signal="pressed" from="UI/DifficultyMenu/ReturnBtn" to="UI/DifficultyMenu/ReturnBtn" method="_on_pressed"]
[connection signal="toggled" from="UI/Settings/Video/VideoOptionsContainer/VideoInputsContainer/Fullscreen" to="UI/Settings/Video" method="_on_fullscreen_toggled"]
[connection signal="toggled" from="UI/Settings/Video/VideoOptionsContainer/VideoInputsContainer/Borderless" to="UI/Settings/Video" method="_on_borderless_toggled"]
[connection signal="item_selected" from="UI/Settings/Video/VideoOptionsContainer/VideoInputsContainer/Vsync" to="UI/Settings/Video" method="_on_vsync_item_selected"]
[connection signal="value_changed" from="UI/Settings/Audio/AudioOptionsContainer/HBoxContainer/AudioInputsContainer/Master" to="UI/Settings/Audio" method="_on_master_value_changed"]
[connection signal="value_changed" from="UI/Settings/Audio/AudioOptionsContainer/HBoxContainer/AudioInputsContainer/Music" to="UI/Settings/Audio" method="_on_music_value_changed"]
[connection signal="value_changed" from="UI/Settings/Audio/AudioOptionsContainer/HBoxContainer/AudioInputsContainer/SFX" to="UI/Settings/Audio" method="_on_sfx_value_changed"]
